--- a/authentication/pubspec.yaml
+++ b/authentication/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  logger: ^0.8.3
+  http: ^0.12.0+4
+  flutter_line_sdk: ^1.2.9
   apple_sign_in: ^0.1.0
   google_sign_in: ^4.4.1
   font_awesome_flutter: ^8.8.1
